--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -50,7 +50,7 @@ environments:
 grails:
     profile: web
     codegen:
-        defaultPackage: grails.spring.webapp
+        defaultPackage: org.imaginea.application
     spring:
         transactionManagement:
             proxies: false
